fixed some spacing

--- a/angular/style.css
+++ b/angular/style.css
@@ -1,3 +1,7 @@
+body{
+    width: 100vw;
+    height: 100vh;
+}
 header{
     width: 1000px;
     height: 72px;
@@ -398,4 +402,9 @@ section{
     #copy_right{
         font-size:55%;
     }
+}
+.bossCont{
+    position: relative;
+    left: 22%;
+
 }
